# qrz-logbook-client

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ham_radio_log_utils/: client.py
qrz_logbook_client/: __init__.py  client.py
tests/: test_client.py
